fix letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,6 @@ nav h1 a {
   justify-content: center;
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
 }
@@ -267,7 +266,6 @@ nav h1 a {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
-  letter-spacing: -1px;
   padding-bottom: 1pt;
 }
 
